[package]
name = "server"
version = "0.1.0"
authors = ["MedAmineFouzai <54685665+MedAmineFouzai@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1"
actix-cors = "0.5.3"
mongodb = "0.9.2"
bson = "0.14.0"
serde = "1.0.103"
serde_json = "1.0"
futures = "0.3.4"
jsonwebtoken = "7.2.0"
isahc = "0.9"





